Modified docker files

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,26 +13,19 @@
 version: '2'
 
 services:
-  postgres:
-    image: postgres:9.6
-    ports:
-      - 5432:5432
-    volumes:
-      - db:/var/lib/postgresql/data
+  db:
+    image: mariadb
+    command: --max_allowed_packet=32505856
     environment:
-      POSTGRES_DATABASE: seed
-      POSTGRES_PASSWORD: example
-    restart: always
-
-  drupal:
-    build: .
-    ports:
-      - 80:80
-    environment:
-      XDEBUG_CONFIG: remote_host=docker.for.mac.localhost
+      MYSQL_RANDOM_ROOT_PASSWORD: 'yes'
+      MYSQL_DATABASE: pantheon
+      MYSQL_USER: pantheon
+      MYSQL_PASSWORD: pantheon
     volumes:
-      - .:/var/www/html:cached
-    restart: always
+      - ./artifacts:/docker-entrypoint-initdb.d
+    networks:
+      - code-network
+      - db-network
 
   mail:
     image: mailhog/mailhog
@@ -40,9 +33,51 @@ services:
       - 1025:1025
       - 8025:8025
     restart: always
+    networks:
+      - mail-network
+
+  web:
+    image: nginx:latest
+    environment:
+      WEBROOT: /var/www/html/web
+    ports:
+      - 80:80
+    volumes:
+      - tmp:/tmp
+      - ./certs:/certs
+      - .:/var/www/html
+      - ./nginx.conf:/etc/nginx/nginx.conf
+      - ./site.conf:/etc/nginx/conf.d/default.conf
+    networks:
+      - code-network
+      - cache-network
+
+  php:
+    build:
+      context: .
+      dockerfile: php.Dockerfile
+    environment:
+      XDEBUG_CONFIG: remote_host=docker.for.mac.localhost
+    volumes:
+      - tmp:/tmp
+      - .:/var/www/html
+      - ./log.conf:/usr/local/etc/php-fpm.d/zz-log.conf
+    networks:
+      - code-network
+      - cache-network
+      - db-network
+      - mail-network
+
+networks:
+  code-network:
+    driver: bridge
+  db-network:
+    driver: bridge
+  cache-network:
+    driver: bridge
+  mail-network:
+    driver: bridge
 
 volumes:
   db:
-  sites:
-  modules:
-  themes:
+  tmp:
