--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
-    "name": "drupal-composer/drupal-project",
-    "description": "Project template for Drupal 8 projects with composer",
+    "name": "mike-mcdonald/drupal-project",
+    "description": "Project template for Drupal 8 projects",
     "type": "project",
     "license": "GPL-2.0+",
     "authors": [
@@ -13,18 +13,6 @@
         {
             "type": "composer",
             "url": "https://packages.drupal.org/8"
-        },
-        {
-            "type": "vcs",
-            "url": "https://github.com/mike-mcdonald/pbot-theme"
-        },
-        {
-            "type": "vcs",
-            "url": "https://github.com/mike-mcdonald/drupal-bootstrap"
-        },
-        {
-            "type": "vcs",
-            "url": "git@bitbucket.org:mikesonaplane/pog_connect.git"
         }
     ],
     "require": {
@@ -35,13 +23,9 @@
         "drupal/core": "~8.4",
         "drupal/ctools": "^3.0",
         "drupal/ds": "^3.1",
-        "drupal/geofield": "^1.0@alpha",
         "drupal/pathauto": "^1.0",
         "drupal/token": "^1.0",
         "drush/drush": "~8.0|^9.0.0-beta8",
-        "pdx/bootstrap": "dev-8.x-3.x",
-        "pdx/pbot-theme": "dev-master",
-        "pdx/pog_connect": "dev-master",
         "webflo/drupal-finder": "^1.0.0",
         "webmozart/path-util": "^2.3"
     },
