--- a/config/sync/block.block.bartik_local_actions.yml
+++ b/config/sync/block.block.bartik_local_actions.yml
@@ -1,15 +1,13 @@
-uuid: 4048191a-0ab7-4f39-aa7e-fc66c5d76e20
+uuid: 63998086-f0a9-4693-8d84-c7c1bef772ea
 langcode: en
 status: true
 dependencies:
   theme:
-    - pbot
-_core:
-  default_config_hash: nRqNttOgdZLKNDxdeCkEbsu0gArr8Fp7XCKrdzFOj60
-id: primary_admin_actions
-theme: pbot
-region: header
-weight: -3
+    - bartik
+id: bartik_local_actions
+theme: bartik
+region: content
+weight: -20
 provider: null
 plugin: local_actions_block
 settings:
