--- a/config/sync/block.block.bartik_messages.yml
+++ b/config/sync/block.block.bartik_messages.yml
@@ -1,17 +1,15 @@
-uuid: 82182c85-6b66-4515-a4ce-16dcff4cfcbd
+uuid: 6a09f6f8-a72f-4b3f-8fe8-f34b366dc393
 langcode: en
 status: true
 dependencies:
   module:
     - system
   theme:
-    - bootstrap
-_core:
-  default_config_hash: 9RnnTUBcn0WRWXfrGOnId2H0Q31uQUeu_F5TnDxl2yg
-id: bootstrap_messages
-theme: bootstrap
-region: header
-weight: -50
+    - bartik
+id: bartik_messages
+theme: bartik
+region: highlighted
+weight: 0
 provider: null
 plugin: system_messages_block
 settings:
