--- a/config/sync/block.block.bartik_powered.yml
+++ b/config/sync/block.block.bartik_powered.yml
@@ -1,17 +1,15 @@
-uuid: 32d72acf-6e87-435c-95e1-3e17b5526e12
+uuid: 70261332-ac8c-4f35-84c7-c330848e746d
 langcode: en
 status: true
 dependencies:
   module:
     - system
   theme:
-    - bootstrap
-_core:
-  default_config_hash: iggZSiUKz4mYP1YPJ8SsUfFu79HIgOTt6IDy3Up59aM
-id: bootstrap_powered
-theme: bootstrap
-region: footer
-weight: -10
+    - bartik
+id: bartik_powered
+theme: bartik
+region: footer_fifth
+weight: 10
 provider: null
 plugin: system_powered_by_block
 settings:
