--- a/config/sync/block.block.bartik_search.yml
+++ b/config/sync/block.block.bartik_search.yml
@@ -1,16 +1,14 @@
-uuid: 0bfcbeb0-4ffb-42f1-a7be-6425b1497707
+uuid: ea83c771-b2ce-4543-bdae-04bc94293695
 langcode: en
 status: true
 dependencies:
   module:
     - search
   theme:
-    - bootstrap
-_core:
-  default_config_hash: F3d5hyAFunLh4PhGviJF019fHn1Z3_zy5gzsQ0tX1K0
-id: bootstrap_search
-theme: bootstrap
-region: sidebar_second
+    - bartik
+id: bartik_search
+theme: bartik
+region: sidebar_first
 weight: -1
 provider: null
 plugin: search_form_block
